--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,28 +1,50 @@
-.contactForm {
+.form {
   display: flex;
   flex-direction: column;
+  gap: 10px;
+  max-width: 300px;
+  margin-bottom: 30px;
+  margin: 15px auto;
+}
+.label {
+  display: flex;
+  flex-direction: column;
+  font-weight: bold;
+}
+.input {
+  padding: 8px;
+  margin-top: 4px;
+  background-color: none;
+  border: 1px solid;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:hover {
+  border-color: rgb(243, 163, 243);
+}
+
+.button {
+  padding: 7px;
+  background-color: rgb(94, 62, 153);
+  color: white;
+  border-radius: 8px;
+  cursor: pointer;
+  max-width: 100px;
+  font-size: smaller;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0 auto;
-  width: 320px;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 20px;
 }
 
-.contactLabel {
-  display: flex;
-  flex-direction: column;
-}
-.contactLabelText {
-  text-align: start;
+.button:hover {
+  background-color: rgb(117, 91, 167);
 }
 
-.contactBtn {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 16px;
-  width: 150px;
-}
-
-.error {
+.errorText {
+  font-size: 14px;
   color: red;
+  background-color: antiquewhite;
+  border-radius: 5px;
+  display: inline-block;
+  padding: 5px;
 }
