--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,15 +1,7 @@
-.contactList {
-  margin: 0 auto;
-  margin-top: 30px;
+.list {
   display: flex;
-  justify-content: center;
-  gap: 20px;
+  gap: 15px;
+  flex-direction: row;
   flex-wrap: wrap;
-}
-
-.contactItem {
-  width: 320px;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 10px;
+  justify-content: center;
 }
