--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,9 +1,22 @@
-.searchContainer {
-  margin: 0 auto;
-  margin-top: 30px;
-  width: 320px;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 20px;
+.search {
+  padding: 10px;
+  width: 100%;
+  border: 2px solid;
+  max-width: 300px;
+  margin-bottom: 30px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.search:hover {
+  border-color: rgb(243, 163, 243);
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.label {
+  font-weight: bold;
+}
