--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
-/* src/index.css */
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
 body {
-  font-family: sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   line-height: 1.5;
 }
 
@@ -17,12 +23,27 @@ p {
 
 ul,
 ol {
+  list-style: none;
+  padding-left: 0;
   margin: 0;
-  padding: 0;
-  list-style-type: none;
 }
 
 img {
   display: block;
   max-width: 100%;
+  height: auto;
+}
+
+button {
+  font-family: inherit;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  font: inherit;
+  color: inherit;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
 }
